js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-gen-await-typeof-import-source.js
DONOTEVALUATE
(
)
;
async
function
*
f
(
)
{
await
typeof
import
.
source
}
